# wrkspcV2

./: .gitignore  .travis.yml  5July18SteeringScript.py  CollDataOverThRange_SteeringScript.py  CreatePedMasterFile_SteeringScript.py  ExampleSteeringScript.py  README.md  RandomSoftwareTriggerSteeringScript.py  crashLog.txt  gainMeasurementSteeringScript.py  setup_thisMB.sh
KLM_lib/: CMakeLists.txt
KLM_lib/KLM_lib/: CMakeLists.txt
KLM_lib/KLM_lib/include/KLM_lib/: Feature_extraction.hpp  Integrate_TH1.hpp  KLM_Tree.hpp  MBevent.hpp  Platform.hh  adc_count_branch.hh  extract_area.hh  extract_edges.hh  extract_efficiency.hpp  extract_gradient.hpp  extract_peak.hh  feature.hpp  filter_waveform.hh  look_for_after_pulsing.hh  look_for_after_pulsing.hpp  noise_rejection_VS_signal_loss.hpp  root_LinkDef.hh
KLM_lib/KLM_lib/src/: Feature_extration.cc  Integrate_TH1.cc  KLM_Tree.cc  MBevent.cc  ectract_peak.cc  extract_efficiency.cc  extract_gradient.cc  feature.cc  look_for_after_pulsing.cc  noise_rejection_VS_signal_loss.cc
KLM_lib/KLM_test01/: CMakeLists.txt
KLM_lib/KLM_test01/src/: KLM_test01.cxx
KLM_lib/KLM_tx_ethparse/: CMakeLists.txt
KLM_lib/KLM_tx_ethparse/src/: tx_ethparse1_ck.cpp  tx_ethparse1_ck.cpp.bak  tx_ethparse_RP.cpp  tx_ethparse_test.cpp
KLM_lib/cmake/: FindROOT.cmake  FindTCLAP.cmake  add_RPATH.cmake
bash/: progFPGA.sh  setup_thisMB.sh
impact/: impact.cmd
lib/: .gitignore  FileHandshake.py  anal_lib.py  cmd_lib.py  linkEth.py  progFPGA.sh  run_lib.py
py/: takeSelfTriggeredData.py  takeSoftwareTriggeredData.py
py/Config/: setMBTXConfig.py
py/MicroProcesses/: JTAG_reprogramming.py  pedcalc.py  readRegScrod.py
py/OfflinePedestals/: SingleASIC_takePedsOffline.py  measurePedDist.py
py/ThresholdScan/: SingleASIC_Starting_Values.py
root/Feature_extraction/: ExtractFeatures_ck.cxx  ProcessWaveforms.cxx
root/Feature_extration/: ExtractFeatures_ck.cxx
root/GainStudies/: MultiGaussFit.cxx
root/TTreeMgmt/: MakeMBeventTTree.cxx  MakePedestalTTree.cxx  PlotPedestalStatistics.cxx  WriteParametersToRootFile.cxx
root/WaveformPlotting/: PlotSomeWaveforms.cxx  StreamAnnotatedSingleChWaveformsToCanvas.cxx
